{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1353,
  "lineage": "ca1d33a1-dede-9dd0-7323-ff2b255b29e6",
  "resources": [
    {
      "module": "module.HAProxy_backup",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_HAProxy_backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-08c6f08adaac1764f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c6f08adaac1764f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fee292f2516a31db",
            "private_dns": "ip-10-0-4-217.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca37023e5dd0a610",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0574a3c3907592f3c",
            "tags": {
              "Name": "PACUJPEU1-HAProxy_backup"
            },
            "tags_all": {
              "Name": "PACUJPEU1-HAProxy_backup"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.Master-Node.aws_instance.PACUJPEU1_master-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.HAproxy-Prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_HAProxy1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-00a6b86ade6683626",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a6b86ade6683626",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09417b0fd7bbda22d",
            "private_dns": "ip-10-0-3-234.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080095f0a557d7d4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "PACUJPEU1-HAProxy1"
            },
            "tags_all": {
              "Name": "PACUJPEU1-HAProxy1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.Master-Node.aws_instance.PACUJPEU1_master-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.HAproxy-stage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_HAProxy2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-02b30fec9894fdd3b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b30fec9894fdd3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03bade518da847562",
            "private_dns": "ip-10-0-3-4.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ffde9ed78121eb45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "PACUJPEU1-HAProxy1"
            },
            "tags_all": {
              "Name": "PACUJPEU1-HAProxy1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.Master-Node.aws_instance.PACUJPEU1_master-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Master-Node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_master-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-09a6cad90c39e7ef6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a6cad90c39e7ef6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05aae4a8f4fc70f4a",
            "private_dns": "ip-10-0-3-122.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ad51af11c1f7e47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "Master-Node0"
            },
            "tags_all": {
              "Name": "Master-Node0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-0095cb9960ce31b5d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0095cb9960ce31b5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f464254a16e967ef",
            "private_dns": "ip-10-0-3-156.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d36e13504dcedf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "Master-Node1"
            },
            "tags_all": {
              "Name": "Master-Node1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-018385d057363d9cb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018385d057363d9cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076563e813b6a86f2",
            "private_dns": "ip-10-0-3-155.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e7e73779ac2232c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "Master-Node2"
            },
            "tags_all": {
              "Name": "Master-Node2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-006e141855c5343a6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006e141855c5343a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0359ab98efa5e88a0",
            "private_dns": "ip-10-0-3-30.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054b3433302968638",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "Master-Node3"
            },
            "tags_all": {
              "Name": "Master-Node3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-02f978d794c02672e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f978d794c02672e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000beb4f2f1f3a1cc",
            "private_dns": "ip-10-0-3-22.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d5bc00dbd989f86e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "Master-Node4"
            },
            "tags_all": {
              "Name": "Master-Node4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-05636e269817ba451",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05636e269817ba451",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa9f852115443f72",
            "private_dns": "ip-10-0-3-8.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09369b5c67e16e2d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "Master-Node5"
            },
            "tags_all": {
              "Name": "Master-Node5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Worker-Node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_worker-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-0bfe8c76d1ef92711",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfe8c76d1ef92711",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9e1a62b0ec2c6eb",
            "private_dns": "ip-10-0-3-116.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05653514934cd7780",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "worker-node0"
            },
            "tags_all": {
              "Name": "worker-node0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-06f2c028e979580dd",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f2c028e979580dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-087918fe247fb9d1b",
            "private_dns": "ip-10-0-3-140.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0440f97f23bab7137",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "worker-node1"
            },
            "tags_all": {
              "Name": "worker-node1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-023a6ec9e442c3e8e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile6",
            "id": "i-023a6ec9e442c3e8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-012398f8f4dc956d6",
            "private_dns": "ip-10-0-3-157.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b84cc6f3086cbc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "PACUJPEU1-ansible"
            },
            "tags_all": {
              "Name": "PACUJPEU1-ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.HAProxy_backup.aws_instance.PACUJPEU1_HAProxy_backup",
            "module.HAproxy-Prod.aws_instance.PACUJPEU1_HAProxy1",
            "module.HAproxy-stage.aws_instance.PACUJPEU1_HAProxy2",
            "module.Master-Node.aws_instance.PACUJPEU1_master-node",
            "module.Worker-Node.aws_instance.PACUJPEU1_worker-node",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.stage-HAProxy_backup.aws_instance.PACUJPEU1_HAProxy_stg-backup",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-acm",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:listener/app/prod-LoadBalancer/9b7740847a7fccbb/9e1b9c584dd3745e",
            "certificate_arn": "arn:aws:acm:eu-west-3:739980000921:certificate/1be6adb2-a04b-4744-8e8c-7748d423d50f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/prod-TargetGrp/ed731d8b0feec7dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:listener/app/prod-LoadBalancer/9b7740847a7fccbb/9e1b9c584dd3745e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/app/prod-LoadBalancer/9b7740847a7fccbb",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-acm.aws_acm_certificate.pacujeu1-certificate",
            "module.aws-acm.aws_acm_certificate_validation.pacujeu1-cert-validation",
            "module.aws-acm.aws_route53_record.pacujeu1-validation-record",
            "module.aws-acm.data.aws_route53_zone.pacujeu1_zone",
            "module.prod-lb.aws_lb.prod-lb",
            "module.prod-lb.aws_lb_target_group.prod-target_grp",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-014b6f51e93816545",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014b6f51e93816545",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f2796b657e69daa",
            "private_dns": "ip-10-0-1-183.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_ip": "13.38.83.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04fe441aa46717633",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b9b390535918373",
            "tags": {
              "Name": "PACUJPEU1-Bastion"
            },
            "tags_all": {
              "Name": "PACUJPEU1-Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-020c1430c66583e44"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1-Bastion-Ansible-SG",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.continous-testing",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_continous-testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01daacddaafcdd876",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-018235e6c8de08b79",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018235e6c8de08b79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0225ee89270ffbf31",
            "private_dns": "ip-10-0-3-119.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c42e0b06f2ffb6d9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "PACUJPEU1-continous-testing"
            },
            "tags_all": {
              "Name": "PACUJPEU1-continous-testing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.grafana_elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "grafana-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/grafana-lb",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "grafana-lb-649128674.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:31300",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "grafana-lb",
            "idle_timeout": 400,
            "instances": [
              "i-0bfe8c76d1ef92711"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 31300,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "grafana-lb",
            "security_groups": [
              "sg-08e26415fb30f678e"
            ],
            "source_security_group": "739980000921/PACUJPEU1-mas_work_sg",
            "source_security_group_id": "sg-08e26415fb30f678e",
            "subnets": [
              "subnet-06b9b390535918373",
              "subnet-0ac7a2bd1d95e0a0b"
            ],
            "tags": {
              "Name": "grafana-lb"
            },
            "tags_all": {
              "Name": "grafana-lb"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.Worker-Node.aws_instance.PACUJPEU1_worker-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkin-elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/jenkins-elb",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-elb-380426918.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "jenkins-elb",
            "idle_timeout": 400,
            "instances": [
              "i-09e90277548d45eff"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "jenkins-elb",
            "security_groups": [
              "sg-08e26415fb30f678e"
            ],
            "source_security_group": "739980000921/PACUJPEU1-mas_work_sg",
            "source_security_group_id": "sg-08e26415fb30f678e",
            "subnets": [
              "subnet-06b9b390535918373",
              "subnet-0ac7a2bd1d95e0a0b"
            ],
            "tags": {
              "Name": "jenkins-elb"
            },
            "tags_all": {
              "Name": "jenkins-elb"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.jenkins.aws_instance.PACUJPEU1_jenkins",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1-Jenkins-SG",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-09e90277548d45eff",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e90277548d45eff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0558a93ea2e1fab16",
            "private_dns": "ip-10-0-3-20.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a0759f615e2da3e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5cd7d411ade5509",
            "tags": {
              "Name": "PACUJPEU1-Jenkins"
            },
            "tags_all": {
              "Name": "PACUJPEU1-Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045862f05070e7dde"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1-Jenkins-SG",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/app/prod-LoadBalancer/9b7740847a7fccbb",
            "arn_suffix": "app/prod-LoadBalancer/9b7740847a7fccbb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-LoadBalancer-1995314644.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/app/prod-LoadBalancer/9b7740847a7fccbb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-LoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e26415fb30f678e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06b9b390535918373"
              },
              {
                "subnet_id": "subnet-0ac7a2bd1d95e0a0b"
              }
            ],
            "subnets": [
              "subnet-06b9b390535918373",
              "subnet-0ac7a2bd1d95e0a0b"
            ],
            "vpc_id": "vpc-0d08bf64ef18a8d99",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prod-lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:listener/app/prod-LoadBalancer/9b7740847a7fccbb/ea04ac6fdad0926d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/prod-TargetGrp/ed731d8b0feec7dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:listener/app/prod-LoadBalancer/9b7740847a7fccbb/ea04ac6fdad0926d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/app/prod-LoadBalancer/9b7740847a7fccbb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod-lb.aws_lb.prod-lb",
            "module.prod-lb.aws_lb_target_group.prod-target_grp",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prod-target_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/prod-TargetGrp/ed731d8b0feec7dc",
            "arn_suffix": "targetgroup/prod-TargetGrp/ed731d8b0feec7dc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 45,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/prod-TargetGrp/ed731d8b0feec7dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-TargetGrp",
            "port": 30001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "prod-lb_tg_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/prod-TargetGrp/ed731d8b0feec7dc-20230430202338079500000012",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/prod-TargetGrp/ed731d8b0feec7dc",
            "target_id": "i-0bfe8c76d1ef92711"
          },
          "dependencies": [
            "module.Worker-Node.aws_instance.PACUJPEU1_worker-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.prod-lb.aws_lb_target_group.prod-target_grp",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prometheus_elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "prometheus-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/prometheus-lb",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "prometheus-lb-866901203.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:31090",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "prometheus-lb",
            "idle_timeout": 400,
            "instances": [
              "i-0bfe8c76d1ef92711"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 31090,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "prometheus-lb",
            "security_groups": [
              "sg-08e26415fb30f678e"
            ],
            "source_security_group": "739980000921/PACUJPEU1-mas_work_sg",
            "source_security_group_id": "sg-08e26415fb30f678e",
            "subnets": [
              "subnet-06b9b390535918373",
              "subnet-0ac7a2bd1d95e0a0b"
            ],
            "tags": {
              "Name": "prometheus-lb"
            },
            "tags_all": {
              "Name": "prometheus-lb"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.Worker-Node.aws_instance.PACUJPEU1_worker-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PACUJPEU1-Bastion-Ansible-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:security-group/sg-020c1430c66583e44",
            "description": "Allow inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020c1430c66583e44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PACUJPEU1-Bast_Ans_SG",
            "name_prefix": "",
            "owner_id": "739980000921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PACUJPEU1-Bast_Ans_SG"
            },
            "tags_all": {
              "Name": "PACUJPEU1-Bast_Ans_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PACUJPEU1-Jenkins-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:security-group/sg-045862f05070e7dde",
            "description": "Allow inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045862f05070e7dde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http Proxy",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PACUJPEU1-jenkins_SG",
            "name_prefix": "",
            "owner_id": "739980000921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PACUJPEU1-jenkins_SG"
            },
            "tags_all": {
              "Name": "PACUJPEU1-jenkins_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PACUJPEU1_mas_work_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:security-group/sg-08e26415fb30f678e",
            "description": "Allow inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e26415fb30f678e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 31090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 31300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http Proxy",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port_https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PACUJPEU1-mas_work_sg",
            "name_prefix": "",
            "owner_id": "739980000921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PACUJPEU1-mas_stage_SG"
            },
            "tags_all": {
              "Name": "PACUJPEU1-mas_stage_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage-HAProxy_backup",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PACUJPEU1_HAProxy_stg-backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:739980000921:instance/i-022be20c1a51ecf77",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022be20c1a51ecf77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "PACUJPEU1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00049867985847a3d",
            "private_dns": "ip-10-0-4-170.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e06d13da76c2f31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0574a3c3907592f3c",
            "tags": {
              "Name": "PACUJPEU1_HAProxy_stg-backup"
            },
            "tags_all": {
              "Name": "PACUJPEU1_HAProxy_stg-backup"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e26415fb30f678e"
            ]
          },
          "dependencies": [
            "module.Master-Node.aws_instance.PACUJPEU1_master-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "stg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/app/stg-LoadBalancer/c35d9695ae15a875",
            "arn_suffix": "app/stg-LoadBalancer/c35d9695ae15a875",
            "desync_mitigation_mode": "defensive",
            "dns_name": "stg-LoadBalancer-781575585.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/app/stg-LoadBalancer/c35d9695ae15a875",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stg-LoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e26415fb30f678e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06b9b390535918373"
              },
              {
                "subnet_id": "subnet-0ac7a2bd1d95e0a0b"
              }
            ],
            "subnets": [
              "subnet-06b9b390535918373",
              "subnet-0ac7a2bd1d95e0a0b"
            ],
            "vpc_id": "vpc-0d08bf64ef18a8d99",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "stg-lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:listener/app/stg-LoadBalancer/c35d9695ae15a875/c82d3be689518de2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/stg-TargetGrp/285603ef07b5b896",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:listener/app/stg-LoadBalancer/c35d9695ae15a875/c82d3be689518de2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:loadbalancer/app/stg-LoadBalancer/c35d9695ae15a875",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.stg-lb.aws_lb.stg-lb",
            "module.stg-lb.aws_lb_target_group.stg-target_grp",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stg-target_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/stg-TargetGrp/285603ef07b5b896",
            "arn_suffix": "targetgroup/stg-TargetGrp/285603ef07b5b896",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 45,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/stg-TargetGrp/285603ef07b5b896",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "stg-TargetGrp",
            "port": 30001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg-lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "stg-lb_tg_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/stg-TargetGrp/285603ef07b5b896-20230430202343280500000013",
            "port": 30001,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:739980000921:targetgroup/stg-TargetGrp/285603ef07b5b896",
            "target_id": "i-06f2c028e979580dd"
          },
          "dependencies": [
            "module.Worker-Node.aws_instance.PACUJPEU1_worker-node",
            "module.keypair.aws_key_pair.PACUJPEU1-keypair",
            "module.security-group.aws_security_group.PACUJPEU1_mas_work_sg",
            "module.stg-lb.aws_lb_target_group.stg-target_grp",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "PACUJPEU1-Eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8ac1dcbc718beca",
            "domain": "vpc",
            "id": "eipalloc-0c8ac1dcbc718beca",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-223-191.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.223.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PACUJPEU1-eip_name"
            },
            "tags_all": {
              "Name": "PACUJPEU1-eip_name"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PACUJPEU1-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:internet-gateway/igw-08c75dbe6d1fc162d",
            "id": "igw-08c75dbe6d1fc162d",
            "owner_id": "739980000921",
            "tags": {
              "Name": "PACUJPEU1-IGW"
            },
            "tags_all": {
              "Name": "PACUJPEU1-IGW"
            },
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PACUJPEU1-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8ac1dcbc718beca",
            "connectivity_type": "public",
            "id": "nat-04bc1e9e0023d8c9d",
            "network_interface_id": "eni-0a89f888b9c0a8c8d",
            "private_ip": "10.0.2.247",
            "public_ip": "13.36.223.191",
            "subnet_id": "subnet-0ac7a2bd1d95e0a0b",
            "tags": {
              "Name": "PACUJPEU1-NAT"
            },
            "tags_all": {
              "Name": "PACUJPEU1-NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.PACUJPEU1-Eip",
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PACUJPEU1-PrvtRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:route-table/rtb-0e3f849a8389da544",
            "id": "rtb-0e3f849a8389da544",
            "owner_id": "739980000921",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04bc1e9e0023d8c9d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PACUJPEU1-PrvtRT"
            },
            "tags_all": {
              "Name": "PACUJPEU1-PrvtRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.PACUJPEU1-Eip",
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_nat_gateway.PACUJPEU1-NAT",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PACUJPEU1-PubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:route-table/rtb-076f5e3aa1a84c54f",
            "id": "rtb-076f5e3aa1a84c54f",
            "owner_id": "739980000921",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c75dbe6d1fc162d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PACUJPEU1-PubRT"
            },
            "tags_all": {
              "Name": "PACUJPEU1-PubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACUJPEU1-PrvtSub01-asst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ece1e73fa0d0906e",
            "route_table_id": "rtb-0e3f849a8389da544",
            "subnet_id": "subnet-0b5cd7d411ade5509"
          },
          "dependencies": [
            "module.vpc.aws_eip.PACUJPEU1-Eip",
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_nat_gateway.PACUJPEU1-NAT",
            "module.vpc.aws_route_table.PACUJPEU1-PrvtRT",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub01",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACUJPEU1-PrvtSub02-asst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f214d8fb1c59c4ef",
            "route_table_id": "rtb-0e3f849a8389da544",
            "subnet_id": "subnet-0574a3c3907592f3c"
          },
          "dependencies": [
            "module.vpc.aws_eip.PACUJPEU1-Eip",
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_nat_gateway.PACUJPEU1-NAT",
            "module.vpc.aws_route_table.PACUJPEU1-PrvtRT",
            "module.vpc.aws_subnet.PACUJPEU1-PrvtSub02",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACUJPEU1-PubSub01-asst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085a1b7cb1983bf7b",
            "route_table_id": "rtb-076f5e3aa1a84c54f",
            "subnet_id": "subnet-06b9b390535918373"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_route_table.PACUJPEU1-PubRT",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub01",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PACUJPEU1-PubSub02-asst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051e975ce321c1852",
            "route_table_id": "rtb-076f5e3aa1a84c54f",
            "subnet_id": "subnet-0ac7a2bd1d95e0a0b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.PACUJPEU1-IGW",
            "module.vpc.aws_route_table.PACUJPEU1-PubRT",
            "module.vpc.aws_subnet.PACUJPEU1-PubSub02",
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACUJPEU1-PrvtSub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:subnet/subnet-0b5cd7d411ade5509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5cd7d411ade5509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739980000921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACUJPEU1-PrvtSub01"
            },
            "tags_all": {
              "Name": "PACUJPEU1-PrvtSub01"
            },
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACUJPEU1-PrvtSub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:subnet/subnet-0574a3c3907592f3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574a3c3907592f3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739980000921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACUJPEU1-PrvtSub02"
            },
            "tags_all": {
              "Name": "PACUJPEU1-PrvtSub02"
            },
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACUJPEU1-PubSub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:subnet/subnet-06b9b390535918373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b9b390535918373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739980000921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACUJPEU1-PubSub01"
            },
            "tags_all": {
              "Name": "PACUJPEU1-PubSub01"
            },
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PACUJPEU1-PubSub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:subnet/subnet-0ac7a2bd1d95e0a0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac7a2bd1d95e0a0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739980000921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PACUJPEU1-PubSub02"
            },
            "tags_all": {
              "Name": "PACUJPEU1-PubSub02"
            },
            "vpc_id": "vpc-0d08bf64ef18a8d99"
          },
          "dependencies": [
            "module.vpc.aws_vpc.PACUJPEU1-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PACUJPEU1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:739980000921:vpc/vpc-0d08bf64ef18a8d99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe3dc8cb85fbb5f2",
            "default_route_table_id": "rtb-08fc5a2bd5c385da4",
            "default_security_group_id": "sg-0ef9b657786997248",
            "dhcp_options_id": "dopt-03ec5cea15d1994b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d08bf64ef18a8d99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fc5a2bd5c385da4",
            "owner_id": "739980000921",
            "tags": {
              "name": "PACUJPEU1-vpc"
            },
            "tags_all": {
              "name": "PACUJPEU1-vpc"
            }
          }
        }
      ]
    }
  ]
}